--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.20",
     "@mui/icons-material": "^5.14.20",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.16",
-    "react-to-pdf": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
+    "react-to-pdf": "^2.0.0",
     "react-to-print": "^2.14.15"
   },
   "scripts": {
@@ -41,4 +41,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
