--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pytest==8.0.0
 black==24.1.1
 flake8==7.0.0
 requests==2.31.0
+pymysql==1.1.0
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch>=2.2.0
 torchvision>=0.17.0
